build/log/idf_py_stdout_output_4118
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/awe/esp/coba_modbus/build/bootloader/esp-idf/esptool_py && /home/awe/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/awe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/awe/esp/coba_modbus/build/bootloader/bootloader.bin
Bootloader binary size 0x66d0 bytes. 0x930 bytes (8%) free.
[2/7] Building C object esp-idf/gsm/CMakeFiles/__idf_gsm.dir/gsm.c.obj
FAILED: esp-idf/gsm/CMakeFiles/__idf_gsm.dir/gsm.c.obj 
/home/awe/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-1006-g02605f1a31-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/awe/esp/coba_modbus/build/config -I/home/awe/esp/coba_modbus/components/gsm/include -I/home/awe/esp/esp-idf/components/newlib/platform_include -I/home/awe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/awe/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/awe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/awe/esp/esp-idf/components/freertos/esp_additions/include -I/home/awe/esp/esp-idf/components/esp_hw_support/include -I/home/awe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/awe/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/awe/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/awe/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/awe/esp/esp-idf/components/heap/include -I/home/awe/esp/esp-idf/components/log/include -I/home/awe/esp/esp-idf/components/soc/include -I/home/awe/esp/esp-idf/components/soc/esp32/. -I/home/awe/esp/esp-idf/components/soc/esp32/include -I/home/awe/esp/esp-idf/components/hal/esp32/include -I/home/awe/esp/esp-idf/components/hal/include -I/home/awe/esp/esp-idf/components/hal/platform_port/include -I/home/awe/esp/esp-idf/components/esp_rom/include -I/home/awe/esp/esp-idf/components/esp_rom/include/esp32 -I/home/awe/esp/esp-idf/components/esp_rom/esp32 -I/home/awe/esp/esp-idf/components/esp_common/include -I/home/awe/esp/esp-idf/components/esp_system/include -I/home/awe/esp/esp-idf/components/esp_system/port/soc -I/home/awe/esp/esp-idf/components/esp_system/port/include/private -I/home/awe/esp/esp-idf/components/xtensa/include -I/home/awe/esp/esp-idf/components/xtensa/esp32/include -I/home/awe/esp/esp-idf/components/lwip/include -I/home/awe/esp/esp-idf/components/lwip/include/apps -I/home/awe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/awe/esp/esp-idf/components/lwip/lwip/src/include -I/home/awe/esp/esp-idf/components/lwip/port/esp32/include -I/home/awe/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/awe/esp/esp-idf/components/driver/include -I/home/awe/esp/esp-idf/components/driver/deprecated -I/home/awe/esp/esp-idf/components/driver/esp32/include -I/home/awe/esp/esp-idf/components/esp_pm/include -I/home/awe/esp/esp-idf/components/esp_ringbuf/include -I/home/awe/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/awe/esp/esp-idf/components/esp_event/include -I/home/awe/esp/esp-idf/components/tcp_transport/include -I/home/awe/esp/esp-idf/components/esp-tls -I/home/awe/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/awe/esp/esp-idf/components/mbedtls/port/include -I/home/awe/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/awe/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/awe/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/awe/esp/coba_modbus=. -fmacro-prefix-map=/home/awe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/gsm/CMakeFiles/__idf_gsm.dir/gsm.c.obj -MF esp-idf/gsm/CMakeFiles/__idf_gsm.dir/gsm.c.obj.d -o esp-idf/gsm/CMakeFiles/__idf_gsm.dir/gsm.c.obj -c /home/awe/esp/coba_modbus/components/gsm/gsm.c
/home/awe/esp/coba_modbus/components/gsm/gsm.c:9:18: error: conflicting type qualifiers for 'CONFIG_BROKER_URL'
    9 | static const int CONFIG_BROKER_URL = 1883;
      |                  ^~~~~~~~~~~~~~~~~
/home/awe/esp/coba_modbus/components/gsm/gsm.c:8:20: note: previous definition of 'CONFIG_BROKER_URL' with type 'const char *'
    8 | static const char *CONFIG_BROKER_URL = "mqtt://174.138.24.9";
      |                    ^~~~~~~~~~~~~~~~~
/home/awe/esp/coba_modbus/components/gsm/gsm.c: In function 'mqtt_init':
/home/awe/esp/coba_modbus/components/gsm/gsm.c:92:31: warning: initialization of 'const char *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
   92 |         .broker.address.uri = CONFIG_BROKER_URL,
      |                               ^~~~~~~~~~~~~~~~~
/home/awe/esp/coba_modbus/components/gsm/gsm.c:92:31: note: (near initialization for 'mqtt_cfg.broker.address.uri')
/home/awe/esp/coba_modbus/components/gsm/gsm.c:96:62: warning: passing argument 3 of 'esp_mqtt_client_register_event' from incompatible pointer type [-Wincompatible-pointer-types]
   96 |     esp_mqtt_client_register_event(client, ESP_EVENT_ANY_ID, mqtt_event_handler, NULL);
      |                                                              ^~~~~~~~~~~~~~~~~~
      |                                                              |
      |                                                              void (*)(void *, const char *, int,  void *)
In file included from /home/awe/esp/coba_modbus/components/gsm/include/gsm.h:18,
                 from /home/awe/esp/coba_modbus/components/gsm/gsm.c:3:
/home/awe/esp/esp-idf/components/mqtt/esp-mqtt/include/mqtt_client.h:547:29: note: expected 'esp_event_handler_t' {aka 'void (*)(void *, const char *, long int,  void *)'} but argument is of type 'void (*)(void *, const char *, int,  void *)'
  547 |         esp_event_handler_t event_handler,
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/home/awe/esp/coba_modbus/components/gsm/gsm.c:101:80: error: 'CONFIG_BROKER_PORT' undeclared (first use in this function); did you mean 'CONFIG_BROKER_URL'?
  101 |     sprintf(mqtt_connect_cmd, "AT+QMTOPEN=0,\"%s\",%d\r\n", CONFIG_BROKER_URL, CONFIG_BROKER_PORT);
      |                                                                                ^~~~~~~~~~~~~~~~~~
      |                                                                                CONFIG_BROKER_URL
/home/awe/esp/coba_modbus/components/gsm/gsm.c:101:80: note: each undeclared identifier is reported only once for each function it appears in
At top level:
/home/awe/esp/coba_modbus/components/gsm/gsm.c:8:20: warning: 'CONFIG_BROKER_URL' defined but not used [-Wunused-variable]
    8 | static const char *CONFIG_BROKER_URL = "mqtt://174.138.24.9";
      |                    ^~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
